--- a/styleposition.css
+++ b/styleposition.css
@@ -1,4 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Grechen+Fuemen&display=swap');
+
 body {
     font-family: "Grechen Fuemen", serif;
+}
+
+.el-1{
+    background-color: red;
+    height: 200px;
+}
+.el-2{
+    background-color: blue;
+    height: 200px;
+}
+.el-3{
+    background-color: yellow;
+    height: 200px;
+    width: 200px;
+    position: fixed;
+    left: 20px;
+    top: 50px;
+}
+.el-4{
+    background-color: green;
+    height: 200px;
+    position: relative; 
+    left: 20px;
+    top: 50px;
+}
+.el-5{
+    background-color: purple;
+    height: 200px;
+}
+.el-6{
+    background-color: grey;
+    height: 400px;
+    position: relative;
+}
+.el-7{
+    background-color: violet;
+    height: 200px;
+    position: absolute;
+    left: 20px;
+    top: 50px;
+    right:50px;
+}
+.el-8{
+    background-color: aqua;
+    height:200px;
+    width: 200px;
+    position: absolute;
+    right: 50px;
+    top: 50px;
 }
