commit pulizia css

--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,4 @@
+/* Esempio pulizia css
 .courier-xxs{
     font-family: 'Courier New', Courier, monospace;
     font-size: xx-small;
@@ -28,4 +29,4 @@
 
 .pad-min{
     padding:12px;
-}
+} */
