--- a/grid.css
+++ b/grid.css
@@ -1,3 +1,62 @@
+.grid-container{
+    display:grid;
+    grid-template-columns: 1fr 1fr 5fr 1fr 2fr;
+    grid-template-rows: repeat(4, 200px);
+    grid-template-areas: 
+        "left-sidebar header header header header"
+        "left-sidebar gold-sidebar main-content side-sidebar right-sidebar"
+        "left-sidebar gold-sidebar main-content side-sidebar right-sidebar"
+        "left-sidebar footer footer footer footer";
+    /* column-gap: 20px;
+    row-gap: 20px; */
+    grid-gap:20px;
+    place-items: stretch;
+}
+
+/* .grid-dim{
+    height:200px;
+    width:200px;
+} */
+
+.g-i-1{
+    background-color: aqua;
+    grid-area: header;
+}
+
+.g-i-2{
+    background-color: red;
+    grid-area: left-sidebar;
+}
+
+.g-i-3{
+    background-color: yellow;
+    grid-area: main-content;
+}
+
+.g-i-4{
+    background-color: green;
+    grid-area: right-sidebar;
+}
+
+.g-i-5{
+    background-color: violet;
+    grid-area: footer;
+}
+
+.g-i-6{
+    background-color: gold;
+    grid-area: gold-sidebar;
+    width:200px;
+    height:200px;
+    justify-self: center;
+    align-self: center;
+}
+
+.g-i-7{
+    background-color: orange;
+    grid-area: side-sidebar;
+}
+
 /* Esempio pulizia css
 .courier-xxs{
     font-family: 'Courier New', Courier, monospace;
